--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "angularfire2": "^5.2.1",
     "core-js": "^2.5.4",
     "firebase": "^6.3.5",
+    "firebase-admin": "^8.3.0",
     "rxjs": "~6.5.1",
     "tslib": "^1.9.0",
     "zone.js": "~0.9.1"
